Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-38943

windeployqt: Plugin dependencies aren't properly checked

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P3: Somewhat important P3: Somewhat important
    • 5.3.1
    • 5.3.0 RC1
    • Windows 8.1
    • WinRT
    • 24e4c294bd4405cc4ce73a013af833ef67bb2a26 (stable, 15.5.2014, 5.3.1)

      windeployqt appears to copy all plugins in iconengines and imageformats without checking their dependencies. For example, the qsvg icon engine and image format plugins get deployed, but QtSvg does not. There may be other plugins that have the same problem.

      This actually causes store certification to fail on WinRT due to missing linkage. In any case, it causes useless bloat (the plugins won't work without their dependencies anyway).

        For Gerrit Dashboard: QTBUG-38943
        # Subject Branch Project Status CR V

            kleint Friedemann Kleint
            andrew.knight Andrew Knight
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes