windeployqt: Consider plugin dependencies.

Pass the disabled libraries to the plugin find function and
make it add new dependent Qt libraries.

Task-number: QTBUG-38943
Change-Id: I5b4eaeb9f25dede738465ba19062f99bda15250b
Reviewed-by: Andrew Knight <andrew.knight@digia.com>